2008-05-17  Diego Ongaro <ongardie@gmail.com>
    * panel-plugin/datetime.c:
      - handle delete event on popup calendar (patch from Mike Massonet)
      - show popup calendar on all workspaces (patch from Mike Massonet)
      - allow ctrl-click on plugin (patch from Mike Massonet)

2008-05-02  Diego Ongaro <ongardie@gmail.com>
    * panel-plugin/datetime.c:
      - fix memory leak with double-g_strdup of setting strings
      - handle NULL from xfce_rc_simple_open,
    * panel-plugin/datetime.h: Use GtkTooltips type (fixes build)

2007-04-07  Remco den Breeje <remco@sx.mine.nu>
    * panel-plugin/datetime.{c,h}, 
    * panel-plugin/datetime-dialog.c: Enable tooltips. Based 
    on a patch by Laurent Meunier <meunier.laurent@laposte.net> (#3073)

2007-04-02  Remco den Breeje <remco@sx.mine.nu>
    * THANKS: added contributors
    * panel-plugin/datetime.c: Fix incorrect display when panel starts (#3062)

2007-03-02  Remco den Breeje <remco@sx.mine.nu>
    * THANKS: added contributors
    * LINGUAS,uk.po: Add Ukrainian translations by LuckAs <luckas_fb@mail.ru>

2007-01-13  Remco den Breeje <remco@sx.mine.nu>
    * release 0.5.0 
      User can choose a layout, added built-in formats of date
      and time. Based on the patch for the clock-plugin by Nick Schermer and 
      Brian Tarricone. 
      See http://foo-projects.org/~nick/patches/xfce4-panel-clock.patch
    * Show actual date and times instead of the format codes in the
    config-dialog. 
    * Created general strftime function for the datetime plugin
    * Fixed some warnings that show when -Wall enabled
    * Grouped the labels in the config-dialog

2006-12-19  Nick Schermer <nick@xfce.org>
    * configure.in.in: Bump version to 0.4.1 for release

2006-12-17  Nick Schermer <nick@xfce.org>
    * Move the file into trunk.
    * Fix compiler warnings.
    * Add LINGUAS support.
    * Cygwin Fix.
    * Fix compiler warnings and header includes.
    * Use new module detection for the panel.